<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.openurp</groupId>
    <artifactId>openurp-java-parent</artifactId>
    <version>0.4.11</version>
  </parent>
  <groupId>org.openurp.edu</groupId>
  <artifactId>openurp-edu-parent4j</artifactId>
  <packaging>pom</packaging>
  <version>0.31.4-SNAPSHOT</version>
  <name>OpenURP Edu Java API Parent</name>

  <properties>
    <java.version>17</java.version>
    <beangle3.version>3.10.0</beangle3.version>
    <quartz.version>2.3.2</quartz.version>
  </properties>

  <modules>
    <module>api4j</module>
    <module>web4j</module>
  </modules>

  <dependencies>
   <dependency>
      <groupId>org.beangle.commons</groupId>
      <artifactId>beangle-commons-model</artifactId>
     <version>${beangle3.version}</version>
    </dependency>
    <dependency>
      <groupId>org.beangle.commons</groupId>
      <artifactId>beangle-commons-core</artifactId>
      <version>${beangle3.version}</version>
    </dependency>
    <dependency>
      <groupId>org.beangle.security</groupId>
      <artifactId>beangle-security-core</artifactId>
      <version>${beangle3.version}</version>
    </dependency>
    <dependency>
      <groupId>org.beangle.ems</groupId>
      <artifactId>beangle-ems-core</artifactId>
      <version>${beangle3.version}</version>
    </dependency>
    <dependency>
      <groupId>org.beangle.orm</groupId>
      <artifactId>beangle-orm-hibernate</artifactId>
      <version>${beangle3.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
    </dependency>
    <dependency>
      <groupId>org.beangle.security</groupId>
      <artifactId>beangle-security-ids</artifactId>
      <version>${beangle3.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context-support</artifactId>
      <version>${spring.version}</version>
    </dependency>
    <dependency>
      <groupId>org.quartz-scheduler</groupId>
      <artifactId>quartz</artifactId>
      <version>${quartz.version}</version>
      <exclusions>
        <exclusion>
          <groupId>*</groupId>
          <artifactId>*</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>javax.xml.bind</groupId>
      <artifactId>jaxb-api</artifactId>
      <version>2.3.0</version>
    </dependency>
  </dependencies>
</project>
